# Mailing_bot

./: .editorconfig  .gitignore  Dockerfile  Dockerfile.bot  Dockerfile.proxy  Makefile  README.md  api_google_bot.service  cert.pem  docker-compose.yml  key.pem  logger_bot.py  main.go  pyproject.toml  requirements.txt  requirements.txt.save  run.py  run_gauth.py  temp.py
api_google_bot/: api_google_bot.py
shp_mailing_bot/: bot.py  config.py  db.json  google_auth.py  google_sheets_info.py  indicators_processing.py  message_creator.py  prep.py
shp_mailing_bot/handlers/: get_constructors_links.py  get_contact_iec.py  get_personal_page.py  get_prep_indicators.py  get_prep_indicators_main.py  get_prep_indicators_semester_navigation.py  get_support_bot.py  get_support_ea_tg.py  get_support_informatics.py  grade_info.py  group_detailing_nps.py  knowledge_base_link.py  main_menu.py  semester_detailing.py
shp_mailing_bot/notion_parse/: notion_filter_constructor.py  notion_parser.py  notion_parser_average_indicators.py  notion_parser_prep_indicators.py
